[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rippling_cli"
version = "0.1.0"
description = "The Rippling Command Line Interface (Rippling CLI) is a unified tool to programmatically involves Rippling services. The Flux commands as part of the Rippling CLI allow both first-party and third-party App developers to create, manage and deploy Rippling-hosted integrations."
readme = "README.md"
authors = ["Rippling Apps <apps@rippling.com>"]


[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
"ruamel.yaml" = "0.17.10"
pkce = "^1.0.3"
urllib3 ="^2.2.1"
requests = "^2.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mypy = "^1.7.1"

[tool.poetry.scripts]
rippling = "rippling_cli.cli.main:cli"
